move app to myusercard and used app as a collection point for components. Set media queries for 1k, 800, 700, 500.styled cards

--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -1,4 +1,138 @@
+@media(min-width: 1000px) {
+  .usercards {
+    background-color: #282c34;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);   
+    padding: 0 10% 0% 10%;  
+    margin: 0 0 1% 0;
+  } 
+  .App {
+    text-align: center;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    padding: 0 0% 5% 0%;
+    background-color: #797475
+    
+  }
+  img {
+    border-radius: 5%;
+    width: 250;
+  }
+}
 
+
+@media (min-width: 800px) {
+  .MyUserCard {
+    background-color: #282c34;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);   
+    padding: 0 30% 0% 30%;  
+    margin: 0 0 1% 0;
+  }
+  .App {
+    text-align: center;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    padding: 0 10% 5% 10%;
+    background-color: #797475
+    
+  }
+  .usercards {
+    background-color: #282c34;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);   
+    padding: 0 30% 0% 30%;  
+    margin: 0 0 1% 0;
+  } 
+  img {
+    border-radius: 5%;
+    width: 400px;
+  }
+  a:hover {
+    color: red;
+  }
+  a {
+    color:white;
+  }
+  
+  h1 {
+    color: #282c34;
+  }
+ h3 {
+   color: #797475;
+ }
+ P {
+   color: #797475;
+ }
+}
+/* ---------------end of 800 media query---- */
+@media(min-width: 700px){
+  * {
+    font-family: 'Roboto', sans-serif;
+  }
+  .MyUserCard {
+    background-color: #282c34;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);   
+    padding: 0 30% 0% 30%;  
+    margin: 0 0 1% 0;
+  }
+
+  .App {
+    text-align: center;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    background-color: #797475;
+    padding: 0 10% 5% 10%;
+  }
+  
+  
+  .usercards {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: gray;  
+    margin: 0 0 1% 0;     
+  } 
+  img {
+    border-radius: 5%;
+    width: 400px;
+  }
+  a:hover {
+    color: red;
+  }
+  a {
+    color:white;
+  }
+  
+  a {
+    word-wrap: normal;
+  }
+  h3 {
+    color: #797475;
+  }
+  P {
+    color: #797475;
+  }
+} 
+
+/* -----------------end of media query 500------------ */
 * {
   font-family: 'Roboto', sans-serif;
 }
@@ -6,10 +140,21 @@
   text-align: center;
   display: block;
   font-family: 'Roboto', sans-serif;
+  background-color: #797475;
+  padding: 0 10% 5% 10%;
+}
+.MyUserCard {
+  background-color: #282c34;    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);   
+  padding: 0 30% 0% 30%;  
+  margin: 0 0 1% 0;
 }
 
-
-.App-header {
+.usercards {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -17,18 +162,26 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: gray;
+  color: gray;  
+  margin: 0 0 1% 0;     
+} 
+img {
+  border-radius: 5%;
+  width: 250px;
+}
+a:hover {
+  color: red;
+}
+a {
+  color:white;
 }
 
-.App-link {
-  color: white;
+a {
+  word-wrap: normal;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  color: #797475;
+}
+P {
+  color: #797475;
 }
