--- a/github-usercard/src/App.css
+++ b/github-usercard/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,11 +22,19 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.userCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.user {
+  background: burlywood;
+  border: 1px solid #282c34;
+  text-align: center;
+  display: inline-block;
+}
+
+.followers {
+text-align: center;
 }
