was able to render the user and the followers from the API call added some styling

--- a/usercards/src/App.css
+++ b/usercards/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background-color:#1b262c;
+ 
   
 }
 
@@ -17,3 +18,7 @@ h1,h2{
   color:#bbe1fa;
 }
 
+.bio{
+  color:#bbe1fa;
+  font-size:1.5rem;
+}
