--- a/usercards/src/App.css
+++ b/usercards/src/App.css
@@ -22,3 +22,26 @@ h1,h2{
   color:#bbe1fa;
   font-size:1.5rem;
 }
+
+button{
+  border-radius: 10px;
+  height: 25px;
+  margin-top:10px;
+  margin-bottom :10px;
+  border: 2px solid #C7F0DB;
+  color: white;
+  font-size: 16px;
+  background-color:#3282b8;
+}
+
+input {
+  background-color:#1b262c ;
+  border: 0;
+  padding: 6px 0;
+  font-size: 1rem;
+  width: 240px;
+  outline: 0;
+  color: white;
+  border-bottom: 1px solid white;
+  margin-right: 8px;
+}
