--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600|Saira+Semi+Condensed&display=swap&subset=latin-ext');
-
-html,
-body,
-#root {
+html, body, #root {
 	width: 100%;
 	height: auto;
 	max-height: 1500px;
@@ -13,14 +10,7 @@ body,
 	/* display: flex; */
 }
 
-h2,
-h3,
-h4,
-h5,
-h6,
-div,
-p,
-span {
+h2, h3, h4, h5, h6, div, p, span {
 	color: #000000;
 	font-family: "Roboto", sans-serif;
 }
@@ -54,18 +44,12 @@ span {
 	font-size: 32pt;
 }
 
-.App h4,
-h5,
-h6,
-p {
+.App h4, h5, h6, p {
 	color: #ffffff;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', sans-serif;
 }
 
-#user-card h4,
-h5,
-h6,
-p {
+#user-card h4, h5, h6, p {
 	color: #ffffff;
 }
 
@@ -184,8 +168,8 @@ p {
 .content-block-1 h5 {
 	font-size: 26pt;
 	text-align: center;
-	margin-left: 16rem;
-	width: 400px;
+	margin-left: 21rem;
+	width: 200px;
 }
 
 .profile {
