--- a/github-react-usercard/src/index.css
+++ b/github-react-usercard/src/index.css
@@ -15,7 +15,7 @@ code {
   display:flex;
   flex-direction: column;
   text-align: center;
-  
+  border:1px solid black;
 }
 
 .usersCardsBox, .repos{
