--- a/react-user-card/src/App.css
+++ b/react-user-card/src/App.css
@@ -37,8 +37,23 @@
   }
 }
 
+.container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+
 .header {
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.header p {
+  font-size: 48px;
 }
