--- a/react-user-card/src/Card.css
+++ b/react-user-card/src/Card.css
@@ -1,3 +1,12 @@
-.props {
+.user {
+    width: 80%;
+    height: 150px;
+    padding: 20px;
     display: flex;
-}
+    flex-direction: column;
+    justify-content: center;    
+    border-radius: 5px;
+    box-shadow: 0 1px 6px -2px #000;
+    background-color: #FFF;
+    margin-bottom: 30px;
+  }
