--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,44 @@
-.App {
-  text-align: center;
+body {
+  background-image: linear-gradient(4               5deg, hotpink, cyan);
+  background-repeat: no-repeat;
+  background-size: stretch;
+  width: 800px;
+  margin: 0 auto;
 }
+
+.card{
+  background: rgba(255,255,255, 0.3);
+  padding: 40px 30px;
+  border-radius: 20px;
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+img{
+  width: 300px;
+}
+
+.info{
+  width: 400px;
+}
+
+h1{
+  text-align: center;
+  color: rgba(50, 50, 50, 0.6);
+}
+
+h3{
+  margin-top: 0;
+}
+
+
+
+
+
+
+
+
 
 .App-logo {
   height: 40vmin;
