--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -3,7 +3,7 @@
   .userCard {
     display: flex;
     justify-content: space-around;
-    margin: 20px 0;
+    margin: 49px auto;
     padding: 20px;
     border: 1px solid #ddd;
     max-width: 600px;
