--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -1,5 +1,6 @@
 .userCardContainer {
   margin: 0 auto;
+
   .userCard {
     display: flex;
     justify-content: space-around;
@@ -10,15 +11,18 @@
 
     .userCard-left {
       width: 30%;
+
       .imgContainer {
         width: 200px;
         height: 200px;
         .border-radius(5px);
         overflow: hidden;
+
         img {
           width: inherit;
         }
       }
+
       p {
         font-style: italic;
       }
@@ -30,17 +34,21 @@
       justify-content: space-between;
       flex-direction: column;
       margin-bottom: 50px;
+
       .userInfo-top {
         background: #000;
         color: #fff;
         padding: 10px;
         .border-radius(5px);
       }
+
       .userInfo-middle {
         text-align: left;
       }
+
       .userInfo-bottom {
         text-align: right;
+
         button {
           color: #fff;
           background: #000;
@@ -55,3 +63,33 @@
   }
 }
 
+.followerCardContainer {
+  display: flex;
+  flex-direction: column;
+  width: 67%;
+  margin: auto;
+
+  .followerCard {
+    display: flex;
+    border: 1px solid #ccc;
+
+    .followerCard-left {
+      width: 100px;
+      height: 100px;
+      overflow: hidden;
+
+      img {
+        width: inherit;
+      }
+    }
+
+    .followerCard-right {
+      align-self: center;
+      padding: 0 40px;
+
+      h4 {
+        text-align: left;
+      }
+    }
+  }
+}
