--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -69,6 +69,10 @@
   width: 67%;
   margin: auto;
 
+  h3 {
+    text-align: left;
+  }
+
   .followerCard {
     display: flex;
     border: 1px solid #ccc;
