--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -8,6 +8,11 @@
     padding: 20px;
     border: 1px solid #ddd;
     max-width: 600px;
+    .userCard-top {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
 
     .userCard-left {
       width: 30%;
