--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -3,11 +3,13 @@
 
   .userCard {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     margin: 49px auto;
     padding: 20px;
     border: 1px solid #ddd;
-    max-width: 600px;
+    max-width: 712px;
+    
     .userCard-top {
       display: flex;
       flex-direction: row;
@@ -107,3 +109,4 @@
   width: 600px;
   margin-top: 30px;
 }
+
