Fix width of follower cards

--- a/github-usercard/src/css/index.css
+++ b/github-usercard/src/css/index.css
@@ -81,7 +81,8 @@ body {
 .followerCardContainer {
   display: flex;
   flex-direction: column;
-  width: 67%;
+  max-width: 760px;
+  min-width: 300px;
   margin: auto;
 }
 .followerCardContainer h3 {
