--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -73,7 +73,8 @@
 .followerCardContainer {
   display: flex;
   flex-direction: column;
-  width: 67%;
+  max-width: 760px;
+  min-width: 300px;
   margin: auto;
 
   h3 {
