Change space between elements in user card

--- a/github-usercard/src/css/index.css
+++ b/github-usercard/src/css/index.css
@@ -33,14 +33,14 @@ body {
 .userCardContainer .userCard .userCard-top {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .userCardContainer .userCard .userCard-left {
   width: 30%;
 }
 .userCardContainer .userCard .userCard-left .imgContainer {
-  width: 200px;
-  height: 200px;
+  width: 220px;
+  height: 220px;
   border-radius: 5px;
   overflow: hidden;
 }
