--- a/github-usercard/src/less/card.less
+++ b/github-usercard/src/less/card.less
@@ -13,15 +13,15 @@
     .userCard-top {
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
 
     .userCard-left {
       width: 30%;
 
       .imgContainer {
-        width: 200px;
-        height: 200px;
+        width: 220px;
+        height: 220px;
         .border-radius(5px);
         overflow: hidden;
 
