--- a/user-card/src/App.css
+++ b/user-card/src/App.css
@@ -3,6 +3,21 @@
   background: linear-gradient(90deg, #5fc2d8 0%, #5a65e2 100%);
   height: 200%;
 }
+
+h1 {
+  font-family: "Permanent Marker", cursive;
+  background: white;
+  border-bottom: 2px solid black;
+  padding-bottom: 15px;
+}
+
+h2 {
+  font-family: "Permanent Marker", cursive;
+  background: white;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
 .User {
   display: flex;
   justify-content: center;
