--- a/github-app/src/App.css
+++ b/github-app/src/App.css
@@ -1,29 +1,64 @@
-.app {
+.App {
   text-align: center;
+
+  background-color: #e7eaec;
 }
 
-.profileCard {
-  margin: 2% auto;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-  width: 250px;
-  }
+.App-logo {
+  height: 40vmin;
 
-  .followersCont {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  }
+  pointer-events: none;
+}
 
-  .followerCard {
-  margin: 0 5% 2%;
-  box-shadow: 0 4px 8px 0 rgba(2, 87, 15, 0.755), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
-  }
+h1,
+h2 {
+  color: #010d14;
+}
 
+.url {
+  color: #1886cf;
+}
 
+.bio {
+  color: #0e6097;
 
-  .nameDiv {
-  background-color: rgba(2, 87, 15, 0.755);
-  padding: 10px;
-  }
+  font-size: 1.5rem;
+}
+
+button {
+  border-radius: 10px;
+
+  height: 25px;
+
+  margin-top: 10px;
+
+  margin-bottom: 10px;
+
+  border: 2px solid #c7f0db;
+
+  color: white;
+
+  font-size: 16px;
+
+  background-color: #5d96bd;
+}
+
+input {
+  background-color: #ffffff;
+
+  border: 0;
+
+  padding: 6px 0;
+
+  font-size: 1rem;
+
+  width: 240px;
+
+  outline: 0;
+
+  color: rgb(15, 13, 13);
+
+  border-bottom: 1px solid white;
+
+  margin-right: 8px;
+}
