--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -1,3 +1,13 @@
 .App {
+  margin: auto;
   text-align: center;
+  background: linear-gradient(
+    to left,
+    rgba(7, 27, 82, 1) 0%,
+    rgba(0, 128, 128, 1) 100%)
+}
+
+.app-header {
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
