--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -4,10 +4,15 @@
   background: linear-gradient(
     to left,
     rgba(7, 27, 82, 1) 0%,
-    rgba(0, 128, 128, 1) 100%)
+    rgba(0, 128, 128, 1) 100%
+  );
+  color: rgb(201, 70, 70);
 }
 
 .app-header {
   margin-top: 0px;
+  margin-bottom: 10px;
+}
+.search-box {
   margin-bottom: 10px;
 }
