--- a/github-usercard/src/scss/index.scss
+++ b/github-usercard/src/scss/index.scss
@@ -2,7 +2,13 @@
 @import 'mixins';
 @import 'reset';
 @import 'App';
+@import 'navbar';
+@import 'userpage';
+@import 'followers';
 
+html{
+  background-color: $bg-color;
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
