--- a/github-usercard/src/scss/followers.scss
+++ b/github-usercard/src/scss/followers.scss
@@ -1,16 +1,19 @@
 .follow-grid {
-    background-color: $white;
+
     width: 70vw;
     margin: 0 auto;
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 6fr 6fr;
+    grid-row-gap: .8rem;
+    grid-column-gap: .8rem;
     @include mid-view() {
         width: 50vw;
         grid-template-columns: 12fr;
 
     }
     a{
+        font-size: clamp(1.2rem, 3vw, 3rem);
         text-decoration: none;
         color: $link;
         &:hover {
@@ -19,14 +22,20 @@
     }
 }
 .follow-card {
+    background-color: $white;
     display: flex;
     flex-direction: row;
     align-items: center;
+    border-radius: 7px;
+    box-shadow: 0 19px 38px rgba($black, 0.8), 0 15px 12px rgba($black, 0.7);
+
+    
 }
 .follow-img{
     img{
         width: 15vw;
         height: 100%;
+        box-shadow: 0 19px 38px rgba($black, 0.5), 0 15px 12px rgba($black, 0.22);
         @include mid-view() {
             width: 15vw;
         }
