--- a/github-usercard/src/scss/userpage.scss
+++ b/github-usercard/src/scss/userpage.scss
@@ -4,6 +4,7 @@
     width: 80vw;
     display: flex;
     border-radius: 2rem;
+    box-shadow: 0 19px 38px rgba($black, 0.8), 0 15px 12px rgba($black, 0.7);
     @include mid-view(){
         flex-direction: column;
     }
@@ -15,21 +16,25 @@
     }
 }
 .git-data {
-    padding: 2.5rem;
+    padding: clamp(2.5rem, 6vw, 10rem);
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-items: start;
-    line-height: 1.2rem;
+    justify-items: center;
+    font-size: clamp(1.2rem, 3vw, 3rem) ;
+
     color: $black;
 
+
     h1{
-        font-size: 2rem;
+        font-size: clamp(2rem, 6vw, 7rem);
+        padding-bottom: 1rem;
 
     }
     h2{
-        font-size: 1.6rem ;
-        line-height: 2rem;
+        font-size: clamp(1.2rem, 3vw, 3rem) ;
+
     }
     .bio {
         text-align: initial;
