edited searchbar font

--- a/github-usercard/src/scss/navbar.scss
+++ b/github-usercard/src/scss/navbar.scss
@@ -9,3 +9,9 @@
         font-size: clamp(1.5rem, 4vw, 5rem);
     }
 }
+button {
+    font-size: clamp(1rem, 3vw, 4rem);
+}
+input {
+    font-size: clamp(1rem, 3vw, 4rem);
+}
