--- a/user-card/src/css/index.css
+++ b/user-card/src/css/index.css
@@ -192,17 +192,34 @@ form .search-btn {
 }
 .main-content {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
   border: 1px solid green;
 }
 .main-content .user {
+  display: flex;
   width: 40%;
   border: 1px solid blue;
+  padding: 5px;
+}
+.main-content .user .user-img {
+  border: 1px solid pink;
+}
+.main-content .user .user-img img {
+  width: 350px;
+  height: 350px;
+  border-radius: 2px;
+}
+.main-content .user .user-info {
+  width: auto;
+  border: 1px solid purple;
+  padding: 10px;
+  margin-left: 10px;
 }
 .main-content .followers {
   width: 60%;
   border: 1px solid red;
+  padding: 5px;
 }
 .footer-container {
   display: flex;
