--- a/user-card/src/less/header.less
+++ b/user-card/src/less/header.less
@@ -5,7 +5,9 @@ header {
     flex-direction: row;
     height: 50px;
     background-color: @header-background;
-    margin-bottom: 1%;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%;
 
     h1 {
         font-size: 2rem;
