--- a/user-card/src/less/body.less
+++ b/user-card/src/less/body.less
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     width: 100%;
     border: 1px solid green;
-    
+    margin-top: 3%;
     
     .user {
         display: flex;
@@ -32,8 +32,12 @@
     }
     
     .followers {
+        display: flex;
+        justify-content: space-around; 
+        align-items: center;
+        flex-wrap: wrap;
         width: 60%;
-        border: 1px solid red;
+        border: 1px solid rgb(13, 218, 64);
         padding: 5px;
     
     }
