--- a/user-card/src/less/body.less
+++ b/user-card/src/less/body.less
@@ -30,16 +30,30 @@
             margin-left: 10px;
         }
     }
-    
-    .followers {
+
+    .followers-container{
         display: flex;
-        justify-content: space-around; 
-        align-items: center;
-        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: column;
         width: 60%;
-        border: 1px solid rgb(13, 218, 64);
-        padding: 5px;
-    
+
+        h3 {
+            font-size: 2rem;
+              
+        }
+        
+        .followers {
+            margin-top: 5px;
+            display: flex;
+            justify-content: space-around; 
+            align-items: center;
+            flex-wrap: wrap;
+            border: 1px solid rgb(13, 218, 64);
+            padding: 5px;
+        
+        }
     }
+    
+    
 }
 
