--- a/user-card/src/less/app.less
+++ b/user-card/src/less/app.less
@@ -1,6 +1,28 @@
 .App {
     text-align: center;
   }
+
+
+  .welcome-container {
+    margin-top: 4%;
+
+    .no-user {
+      font-size: 3rem;
+      margin-top: 3%;
+    }
+    
+
+    p {
+      font-size: 1.5rem;
+
+    }
+
+    img {
+      width: 250px;
+      
+    }
+  }
+
   
   .App-logo {
     height: 40vmin;
