--- a/user-card/src/less/header.less
+++ b/user-card/src/less/header.less
@@ -10,7 +10,16 @@ header {
     width: 100%;
 
     h1 {
+        color: rgb(220, 231, 241);
         font-size: 2rem;
+    }
+
+    .right-image {
+        img {
+            padding: 3px;
+            width: 150px;
+            height: 45px;
+        }
     }
 }
 
