--- a/user-card/src/less/header.less
+++ b/user-card/src/less/header.less
@@ -12,6 +12,7 @@ header {
     h1 {
         color: rgb(220, 231, 241);
         font-size: 2rem;
+        text-shadow: 1px 1px 5px rgb(14, 1, 1);
     }
 
     .right-image {
