--- a/user-card/src/less/footer.less
+++ b/user-card/src/less/footer.less
@@ -12,6 +12,11 @@
         background-color: @footer-background;
         margin-top: 1%;
         width: 98%;
+
+        h3 {
+            font-size: 1.2rem;
+            text-decoration: underline;
+        }
     }
 
 }
