--- a/user-card/src/less/followerCard.less
+++ b/user-card/src/less/followerCard.less
@@ -8,7 +8,13 @@
     height: 150px;
 
     p{
+        font-size: 1.1rem;
+        font-weight: bold;
         cursor: pointer;
+    }
+
+    p:hover {
+        text-decoration: underline;
     }
     
 
