--- a/user-card/src/less/followerCard.less
+++ b/user-card/src/less/followerCard.less
@@ -7,15 +7,18 @@
     width: 150px;
     height: 150px;
 
-    p{
+    :hover {
+        width: 155px;
+        height: 155px;
+    }
+
+    p {
         font-size: 1.1rem;
         font-weight: bold;
         cursor: pointer;
+       
     }
 
-    p:hover {
-        text-decoration: underline;
-    }
     
 
     img {
@@ -23,5 +26,6 @@
         height: 125px;
         margin-bottom: 5px;
         border-radius: 3px;
+        cursor: pointer;
     }
 }
