--- a/user-card/src/less/variables.less
+++ b/user-card/src/less/variables.less
@@ -1,2 +1,5 @@
-@header-background: rgb(111, 111, 116);
-@footer-background:  rgb(194, 194, 199);
+@header-background: black;
+@footer-background: #7dbae6;
+@header-btn-color: #f4cab2;
+@header-h1-color: #f4cab2;
+@headre-h1-shadow-color: #9adbf1;
