--- a/user-card/src/css/index.css
+++ b/user-card/src/css/index.css
@@ -182,7 +182,7 @@ header {
   align-items: center;
   flex-direction: row;
   height: 50px;
-  background-color: #6f6f74;
+  background-color: black;
   position: fixed;
   /* Set the navbar to fixed position */
   top: 0;
@@ -190,9 +190,9 @@ header {
   width: 100%;
 }
 header h1 {
-  color: #d9e2eb;
+  color: #f4cab2;
   font-size: 2rem;
-  text-shadow: 1px 1px 5px #072752;
+  text-shadow: 1px 1px 1px #9adbf1;
 }
 header .right-image img {
   padding: 3px;
@@ -210,7 +210,7 @@ form .search-btn {
   display: flex;
   align-items: center;
   border-radius: 2px;
-  background-color: burlywood;
+  background-color: #f4cab2;
   padding: 2px;
   height: 14px;
   cursor: pointer;
@@ -326,7 +326,7 @@ form .search-btn {
   align-items: center;
   flex-direction: row;
   height: 50px;
-  background-color: #c2c2c7;
+  background-color: #7dbae6;
   margin-top: 1%;
   width: 98%;
 }
