--- a/user-card/src/less/footer.less
+++ b/user-card/src/less/footer.less
@@ -12,6 +12,7 @@
         background-color: @footer-background;
         margin-top: 1%;
         width: 98%;
+        border-radius: 3px;
 
         h3 {
             font-size: 1.2rem;
