--- a/user-card/src/css/index.css
+++ b/user-card/src/css/index.css
@@ -329,6 +329,7 @@ form .search-btn {
   background-color: #7dbae6;
   margin-top: 1%;
   width: 98%;
+  border-radius: 3px;
 }
 .footer-container footer h3 {
   font-size: 1.2rem;
